# learning-gitops

./: .gitignore  README.md  cart_deployment.yaml
.github/workflows/: coffee-cart-cd.yaml  coffee-cart-ci.yaml  coffee-cart-md.yaml  coffee-order-cd.yaml  coffee-order-ci.yaml  coffee-order-md.yaml
gitops/applications/coffee/order/: kustomization.yaml
gitops/applications/platform/argo-cd/: argocd-server-ingress.yaml  kustomization.yaml
gitops/applications/platform/argo-resources/: kustomization.yaml  namespaces.yaml  projects.yaml
gitops/applications/platform/argo-rollouts/: kustomization.yaml
gitops/applications/platform/external-secrets/: cluster-secret-store.yaml  kustomization.yaml  values.yaml
gitops/applications/platform/metrics-server/: kustomization.yaml  values.yaml
gitops/bootstrap/phase-0/: create-cluster.sh  delete-cluster.sh
gitops/bootstrap/phase-1/: kustomization.yaml
gitops/bootstrap/phase-2/: argo-bootstrap.yaml  kustomization.yaml
gitops/bootstrap/phase-3/: external-bootstrap.yaml  kustomization.yaml
gitops/bootstrap/phase-4/: kustomization.yaml  products.yaml
gitops/charts/mini/: Chart.yaml  values.yaml
gitops/products/: coffee.yaml  kustomization.yaml
gitops/products/coffee/: application-sets.yaml  kustomization.yaml  projects.yaml
products/coffee/order/api/: .env  Dockerfile  Makefile  README.md  config.yaml  docker-entrypoint.sh  pyproject.toml
products/coffee/order/api/src/order/: container.py  domain.py  infrastructure.py  interface.py  main.py
products/coffee/order/api/tests/: conftest.py  test_order.py
(+36 files in other folders)
